objects/FacebookoBject__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB_Date__c</fullName>
        <label>DOB Date</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB_Month__c</fullName>
        <label>DOB Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB_Year__c</fullName>
        <label>DOB Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <label>DateCreated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailT__c</fullName>
        <label>EmailT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Unix_Timestamp__c</fullName>
        <formula>( Event_Time__c - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )) * 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Time Unix Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Timet__c</fullName>
        <label>Event Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phonet__c</fullName>
        <label>Phonet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_IDs__c</fullName>
        <label>Service IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Item_IDs__c</fullName>
        <label>Service Item IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Item_Quantity__c</fullName>
        <label>Service Item Quantity</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Items_Name__c</fullName>
        <label>Service Items Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_item__c</fullName>
        <label>Service item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIPcode__c</fullName>
        <label>ZIPcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FacebookDataObject</label>
    <nameField>
        <displayFormat>FB-{0}</displayFormat>
        <label>FacebookoBject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FacebookDataObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>